# otus-cpp-basics

./: CMakeLists.txt  README.md  game.cpp  game.h  guess_the_number.cpp  high_scores.txt  io_score.cpp  io_score.h  parse_arg.cpp  parse_arg.h  scores.txt  test.txt  test2.txt
